# codex-app-linux

./: .gitignore  AGENTS.md  FEATURE_FLAGS.md  README.md  electron-builder.config.mjs  flake.nix  package-lock.json  package.json  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  upstream-canary.yml
native/chrome-extension-host/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
native/chrome-extension-host/LICENSES/: ilysenko-MIT.txt
native/chrome-extension-host/src/: assets.rs  config.rs  framing.rs  host.rs  legacy.rs  legacy_connection.rs  legacy_info.rs  legacy_tests.rs  lib.rs  main.rs  open_file.rs  rollout.rs  rpc.rs  uds.rs
native/chrome-extension-host/src/config/: managed.rs
native/chrome-extension-host/src/runtime/: broker.rs  broker_tests.rs  desktop_agent_mode.rs  http.rs  mod.rs  process.rs  proxy.rs  proxy_tests.rs
runtime/: launcher.mjs
runtime/lib/: plusplus.mjs
runtime/webstrap/: assets.mjs  bridge-shim.js  ipc-uds.mjs  message-router.mjs  server.mjs  util.mjs
scripts/: canary.mjs  check-release-state.mjs  electron-builder-after-pack.cjs  release-channel.mjs  release-notes.mjs  smoke-artifacts.mjs
test/: appcast.test.mjs  aur.test.mjs  build.test.mjs  chrome-extension-host.test.mjs  chrome-extension-patches.test.mjs  chrome-plugin-patches.test.mjs  electron-builder-config.test.mjs  ipc-uds.test.mjs  launcher-wrapper.test.mjs  message-router.test.mjs  package-manifest.test.mjs  release-workflow.test.mjs  smoke-artifacts.test.mjs  upstream-patches.test.mjs  web-assets.test.mjs
(+13 files in other folders)
